# adbc_scanner

./: CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  ROADMAP.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
scripts/: bootstrap-template.py
src/: adbc_catalog.cpp  adbc_connection.cpp  adbc_execute.cpp  adbc_extension.cpp  adbc_filter_pushdown.cpp  adbc_functions.cpp  adbc_insert.cpp  adbc_scan.cpp  adbc_scanner_extension.cpp  adbc_secrets.cpp  query_farm_telemetry.cpp
src/include/: adbc_connection.hpp  adbc_filter_pushdown.hpp  adbc_functions.hpp  adbc_scanner_extension.hpp  adbc_secrets.hpp  adbc_utils.hpp  query_farm_telemetry.hpp
src/include/storage/: adbc_catalog.hpp  adbc_catalog_set.hpp  adbc_schema_entry.hpp  adbc_schema_set.hpp  adbc_storage.hpp  adbc_table_entry.hpp  adbc_table_set.hpp  adbc_transaction.hpp  adbc_transaction_manager.hpp
src/storage/: adbc_catalog.cpp  adbc_catalog_set.cpp  adbc_clear_cache.cpp  adbc_schema_entry.cpp  adbc_schema_set.cpp  adbc_storage.cpp  adbc_table_entry.cpp  adbc_table_set.cpp  adbc_transaction.cpp  adbc_transaction_manager.cpp
test/: README.md
test/sql/: adbc.test  adbc_attach.test  adbc_catalog.test  adbc_connect.test  adbc_execute.test  adbc_insert.test  adbc_scan.test  adbc_scan_table.test  adbc_secrets.test  adbc_transactions.test  quack.test
vcpkg-overlay/arrow-adbc/: portfile.cmake  toml.patch  vcpkg.json
